Change the FAQ content

--- a/app/views/static_pages/about.html.haml
+++ b/app/views/static_pages/about.html.haml
@@ -3,18 +3,18 @@
 .about
 
 
-  %h3 Who writes all of this?
+  %h3 Who contributes to the research questions?
   PhD students, postdocs, and professors (See the 
   = link_to "People", static_pages_people_url
   page). To keep the quality of content high, we do not open up editing to everyone (aka NOT the Wikipedia model). If you're a researcher and you'd like to contribute, awesome! Email us at
   =mail_to "info@devecgps.com."
-  It's a great way to get your name out there and to help out other researchers in your field, without the large time commitment of writing an article. You can also automatically recommend papers from any entry, without even logging in ( e.g. on
+  It's a great way to get your name out there and to help out other researchers in your field. You can also automatically recommend papers from any entry, without even logging in ( e.g. on
   = link_to "this entry.", '/lists/136?collection=3'
   )
 
   %h3 Can I trust the information?
   %ul
-    %li We always make sure to tell you where the information comes from at the top of the page, so that you can evaluate the credibility for yourself. Entries are usually based on review articles and handbook chapters. When there isn’t a review article out there (or it’s dated, as many are), we call in the experts — late-stage PhD students, postdocs, faculty. It's just like getting a recommendation from a colleague, but quicker!
+    %li We'll always tell you where the information comes from so that you can judge for yourself. To keep quality high, we only allow researchers with credentials to edit pages. The goal is that coming here for paper recommendations and new ideas is as reliable as consulting a colleague, going to office hours, or reading a handbook chapter.
 
 
   %h3 Can I send feedback?
