--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -24,7 +24,7 @@
     %h2#catchphrase Powerboost your research
 
   .col-xs-12
-    %h4#sub-slogan DevEc GPS is a place for development economists to collect the latest findings and ideas about high-impact research questions
+    %h4#sub-slogan DevEc GPS collects the latest findings and ideas about high-impact research questions in development economics
 
   .col-xs-12#sample-question
     .btn.btn-primary.btn-default.btn-primary-text
