--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,110 +1,61 @@
+%header.header
+  %div
+    .header--primary
+      .container
+        %a.brand
+          %span.logo
+            %i.fa.fa-fast-forward
+          .brand--title.u-hidden-on-small-screen
+            %h1= link_to "FastForward", root_url
+        %ul.header--nav
+          %li
+            - if user_signed_in?
+              = link_to "Log Out", destroy_user_session_path, method: 'delete'
+            -else
+              = link_to "Log In", new_user_session_path
+          %li.u-hidden-on-small-screen
+            %a.header--post(href="#")
+              / %svg(width="50" height="50")
+              / %circle(cx="25" cy="25" r="20" stroke="green" stroke-width="2" fill="yellow")
+    .header--secondary.v-links
+      .container
+        %a.header--secondary--link
+          = link_to "RESEARCH QUESTIONS", lists_path
 
-%nav.navbar.navbar-inverse.navbar-fixed-top{role:"navigation"}
-  .navbar-header
-    =link_to root_url, class:"navbar-brand", id:"logo" do
-      %i.fa.fa-globe
-      Development Economics GPS
+        %a.header--secondary--link#following
+          -if user_signed_in?
+            = link_to subscriptions_path do
+              FOLLOWING
+              %span#user-follow-count= "(#{current_user.lists.count})"
+        %a.header--secondary--link#filter
+          FILTER
+          %i.fa.fa-chevron-down
 
-  %ul.nav.navbar-right.top-nav
-    %li.search
-      %input.search-bar{autocomplete: "off", id: "q", placeholder: "Search your research interest (e.g. school vouchers)", type: "text", spellcheck: "false"}
-    - if current_user.try(:admin?)
-      %li.btn.btn-default.btn-primary= link_to "Sign out", destroy_user_session_path, method: 'delete'
+/ %nav.navbar.navbar-inverse.navbar-fixed-top{role:"navigation"}
+/   .navbar-header
+/     =link_to root_url, class:"navbar-brand", id:"logo" do
+/       %i.fa.fa-globe
+/       Development Economics GPS
 
+/   %ul.nav.navbar-right.top-nav
+/     %li.search
+/       %input.search-bar{autocomplete: "off", id: "q", placeholder: "Search your research interest (e.g. school vouchers)", type: "text", spellcheck: "false"}
+/     - if current_user.try(:admin?)
+/       %li.btn.btn-default.btn-primary= link_to "Sign out", destroy_user_session_path, method: 'delete'
 
+/ .container-fluid.sub-nav
+/   .row.child-collections
+/     %ul
+/       -if @collection && !@collection.new_record?
 
-    %li.dropdown
-      %a.dropdown-toggle(href="#" data-toggle="dropdown")
-      / John Smith
-      / %b.caret
-      / %ul.dropdown-menu
-      /   %li
-      /     %a{href:"#"}
-      /       %i.fa.fa-fw.fa-user
-      /       Profile
-      /   %li
-      /     %a{href:"#"}
-      /       %i.fa.fa-fw.fa-user
-      /       Profile
-      /   %li
-      /     %a{href:"#"}
-      /       %i.fa.fa-fw.fa-user
-      /       Profile
-      /   %li.divider
-      /   %li
-      /     %a{href:"#"}
-      /       %i.fa.fa-fw.fa-power-off
-      /       Log Out
-  .collapse.navbar-collapse.navbar-ex1-collapse
-    %ul.nav.navbar-nav.side-nav
-      - if current_user.try(:admin?)
-        %li= link_to "New List", new_list_path
-        %li= link_to "New Collection", new_collection_path
-      - if signed_in?
-        %li= link_to "Sign out", destroy_user_session_path, method: "delete"
-      %li
-        = link_to root_url, id: ("highlight_root_collection" if request.original_url == root_url) do
-          %i.fa.fa-home
-          HOME
-      - if @collection
-        - Collection.roots.each do |collection|
-          %li.collection
-            = link_to collection, id: ("highlight_root_collection" if @collection.root == collection) do
-              %i.fa.fa-folder
-              = collection.name
-        %li 
-          %a More categories coming soon...
-      -else
-        - Collection.roots.each do |collection|
-          %li.collection
-            = link_to collection do
-              %i.fa.fa-folder
-              = collection.name
-        %li
-          %a More categories coming soon...
-
-
-.container-fluid.sub-nav
-  .row.child-collections
-    %ul
-      -if @collection && !@collection.new_record?
-
-        %li.child
-          = link_to "All", @collection.root, class: ("highlight" if @collection == @collection.root)
-        -@collection.root.children.each do |child|
-          %li.child= link_to child.name, child, class: ("highlight" if @collection == child)
-      -else
-        %li.child= link_to "Home", root_url, class: ("highlight" if request.original_url == root_url)
-        %li.child= link_to "FAQ", static_pages_about_url, class: ("highlight" if request.original_url == static_pages_about_url)
-        %li.child= link_to "People", static_pages_people_url, class: ("highlight" if request.original_url == static_pages_people_url)
-/ %nav.navbar.gps-nav.navbar-default.navbar-fixed-top
-/   .container-fluid
-/     .navbar-header
-/       .navbar-brand 
-/         =link_to root_path do 
-/           Development Economics 
-/           %span#globe GPS
-/     .text-right.slogan.right-header
-/       %ul.pull-right
-/         / %li= link_to "Who's contributing to this project?", static_pages_contributors_path
-/         / %li 
-/         /   = "Happy #{Date.today.strftime('%A')}!"
-
-/         %li.auth-button#how-this-works
-/           = link_to "How this works", static_pages_about_path
-/         - if current_user.try(:admin?)
-/           %li= button_to "Create list", new_list_path, method: 'get'
-/         / - if signed_in?
-/ %li.auth-button= link_to "Sign out", destroy_user_session_path, method: 'delete'
-/         / - else
-/         /   %li.auth-button= link_to "Sign In", new_user_session_path
-
-/ :javascript
-/     $(document).ready( function() {
-/       $('#how-this-works').click( function() {
-/         mixpanel.track("Visited about page", {"age": 10});
-/       });
-/     });
+/         %li.child
+/           = link_to "All", @collection.root, class: ("highlight" if @collection == @collection.root)
+/         -@collection.root.children.each do |child|
+/           %li.child= link_to child.name, child, class: ("highlight" if @collection == child)
+/       -else
+/         %li.child= link_to "Home", root_url, class: ("highlight" if request.original_url == root_url)
+/         %li.child= link_to "FAQ", static_pages_about_url, class: ("highlight" if request.original_url == static_pages_about_url)
+/         %li.child= link_to "People", static_pages_people_url, class: ("highlight" if request.original_url == static_pages_people_url)
 
 :javascript
   $('.collection').click( function() {
