--- a/app/views/lists/_list.html.haml
+++ b/app/views/lists/_list.html.haml
@@ -1,21 +1,14 @@
-= link_to list_path(list, :collection => @collection) do
-  %li.feed-item
-    .row
-      .col-xs-12
-        %h5= list.title
-        .item-count.gray
-          = "#{list.items.count} recommended papers"
-      /   %span.timestamp.gray= "Last updated #{time_ago_in_words(list.updated_at)} ago;"
-      /   %span.item-count.gray=pluralize(list.items.count, 'paper')
-      /   - list.tags.each do |tag|
-      /     %span.tag= tag.name
-      / .col-xs-4.social-info.text-right
-      /   / - list.users.each do |user|
-      /   / = link_to user.link do
-      /   / .school-icon= image_tag("Harvard_University.png")
-      /   / %span.profile-img= image_tag("#{user.first_name}_#{user.last_name}.jpg")
-      /   - if current_user.try(:admin?)
-      /     =button_to "Edit", edit_list_path(list), method: "get"
-      /     - if !list.published?
-      /       = "unpublished"
+.post-item
+  .post-item-content
+    %a.post-follow-button
+      = render partial: 'lists/follow_form', locals: {list: list} 
 
+    .post-item--text
+      .post-item--text--name
+        = link_to list.title, list_path(list)
+        .post-item--text-tags
+          - list.tags.each do |tag| 
+            %span.post-item--text-tag{class: "tag-" + tag.name}= tag.name
+  .post-item--actions
+    .post-item--actions--users
+      %span.post-item--actions--user Ethan
