--- a/app/views/lists/index.html.haml
+++ b/app/views/lists/index.html.haml
@@ -1,21 +1,1 @@
-
-
-/ .row.tag-list
-/   .col-xs-12
-/     = form_tag lists_path, method: :get, class: "tag-form" do
-/       %ul
-/       - @tags.each do |tag|
-/         %li
-/ # = check_box_tag("tags[]", tag.id, @checked_tags[tag.id], class: "checkbox")
-/           %span= tag.name
-/ # = submit_tag "Filter", class: "submit"
-
-.row.banner{style: "background-image: url(#{image_path @tag_image})"}
-  .banner-info
-    .container
-      .name
-        %span=@tag.name
-.row.feed
-  .col-xs-12
-    %ul
-      = render @lists
+= render partial: 'shared/feed', locals: {heading: "Featured", date: Date.today.strftime("%B %d")}
