--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,10 +1,63 @@
-@import "bootstrap-sprockets";
 @import "bootstrap";
+@import "bootstrap-sprockets";
 @import "font-awesome-sprockets";
 @import "font-awesome";
 
+
+
+
+.profile-img img {
+	height: 40px;
+	border-radius: 100%;
+	border: 2px solid white;
+}
+
+.follow-count-list {
+	float:left;
+}
 a {
 	text-decoration: none;
+}
+
+.submitter {
+	float: right;
+	max-width: 200px;
+	img {
+		display: block;
+		margin: auto;
+		margin-bottom: 10px;
+	}
+}
+
+#myModal {
+	.modal-body {
+		display: block;
+		margin: auto;
+		text-align: center;
+		button {
+			width: 200px;
+		}
+		a {
+			color: white;
+		}
+	}
+	.modal-title {
+		color: black;
+	}
+}
+
+#newFindingModal {
+	color: black;
+	#instructions li {
+		list-style: disc;
+		margin-left: 30px;
+	}
+	input, textarea {
+		width: 400px;
+	}
+	textarea {
+		height: 200px;
+	}
 }
 
 .close-item-modal {
@@ -143,6 +196,7 @@ a {
 }
 
 .new_subscription, .edit_subscription {
+	width: 90px;
 	input {
 		width: 90px;
 	}
@@ -151,6 +205,9 @@ a {
 .follow-form {
 	// width: 100px;
 	float:left;
+	li {
+		float:left;
+	}
 }
 
 .post-item--text {
@@ -198,11 +255,51 @@ a {
 }
 
 .tag-Trade {
-	background: blue;
+	background: #e54b4b;
 }
 .tag-Employment {
-	background: yellow;
+	background: #e5c648;
 }
+.tag-Microfinance {
+	background: #82c440;
+}
+.tag-Firms {
+	background: #4178c6;
+}
+#filter {
+	ul {
+		// height: 100%;
+	}
+	li a {
+		color: white;
+		text-transform: uppercase;
+		padding: 10px;
+		font-weight: bold;
+		margin-right: 0px;
+	}
+}
+.dropdown-menu {
+	padding: 0px;
+	margin: 0px;
+	line-height: normal;
+	li, a {
+		padding: 0px;
+		margin: 0px;
+		line-height: normal;
+	}
+	a {
+		padding: 10px;
+	}
+	li {
+		background: #333;
+		a {
+			&:hover {
+			background: #333;
+			}
+		}
+	}
+}
+
 
 h1 {
 	margin: 0px;
@@ -250,7 +347,7 @@ div {
 }
 
 .page-header--info {
-	float: left;
+	// float: left;
 	margin-bottom: 20px;
 }
 
@@ -279,9 +376,9 @@ div {
 .page-header--buttons {
 	// float: right;
 	// text-align: center;
-	width: 600px;
+	// width: 600px;
 	input {
-		font-size: 1.2em;
+		// font-size: 1.2em;
 		margin-right: 10px;
 	}
 	// margin-top: 60px;
@@ -295,19 +392,25 @@ div {
 	margin-top: 20px;
 }
 
+#post-new-finding-button {
+	background: #e54b4b;
+	margin-left: 10px;
+}
+
 .list--badge {
 	border: 1px solid #fff;
 	border-radius: 50%;
 	box-shadow: 0 1px 2px rgba(0,0,0,0.2);
 	color: #fff;
 	font-size: 15px;
-	height: 20px;
-	left: -.1em;
+	height: 25px;
+	left: -.1px;
 	// line-height: 16px;
 	position: absolute;
 	text-align: center;
-	top: -.1em;
-	width: 20px;
+	padding-top: 3px;
+	top: -1px;
+	width: 25px;
 	background: #00b27f;
 	font-weight: 400;
 }
@@ -343,6 +446,7 @@ div {
 	li {
 		display: inline-block;
 		float: left;
+
 	}
 	margin: 5px 0;
 	font-size: 18px;
@@ -351,6 +455,7 @@ div {
 .header--secondary {
 	background: #f7f7fa;
 	border-bottom: 1px solid #e4e2e2;
+	height: 65px;
 	padding: 15px 0;
 	#filter {
 		float: right;
@@ -358,15 +463,32 @@ div {
 	a {
 		margin-right: 10px;
 	}
+	.active {
+		color: black;
+		border-bottom: 1px solid black;
+		padding-bottom: 30px;
+	}
 }
+
+.bottom-line {
+}
+
 
 html, body {
 	// min-height: 100%;
 	// margin: 0;
+	// font-family: Lato;
+	// font-weight: 600;
 }
 
 html {
 	overflow-y: scroll;
+}
+
+.bottom-line {
+	li {
+		margin-bottom: 20px;
+	}
 }
 
 body {
@@ -685,16 +807,7 @@ li {
 	}
 }
 
-.profile-img {
-	z-index: -1;
-	img {
-	border-radius: 100%;
-	width: 30px;
-	height: 30px;
-	// margin-top: -10px;
-	// position: absolute;
-	}
-}
+
 
 .byline {
 	padding-bottom: 5px;
