--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -8,28 +8,41 @@
           .brand--title.u-hidden-on-small-screen
             %h1= link_to "FastForward", root_url
         %ul.header--nav
-          %li
-            - if user_signed_in?
-              = link_to "Log Out", destroy_user_session_path, method: 'delete'
-            -else
-              = link_to "Log In", user_omniauth_authorize_path(:facebook)
-          %li.u-hidden-on-small-screen
-            %a.header--post(href="#")
-              / %svg(width="50" height="50")
-              / %circle(cx="25" cy="25" r="20" stroke="green" stroke-width="2" fill="yellow")
+          - if user_signed_in?
+            %li= link_to "Log Out", destroy_user_session_path, method: 'delete'
+            %li.profile-img= image_tag(current_user.image)
+          -else
+            %li= link_to "Log In", user_omniauth_authorize_path(:facebook)
+        %li.u-hidden-on-small-screen
+          %a.header--post(href="#")
+            / %svg(width="50" height="50")
+            / %circle(cx="25" cy="25" r="20" stroke="green" stroke-width="2" fill="yellow")
     .header--secondary.v-links
       .container
         %a.header--secondary--link
-          = link_to "RESEARCH QUESTIONS", lists_path
+          = link_to "RESEARCH QUESTIONS", root_path, class: ("active" if request.env['PATH_INFO'] == '/')
 
         %a.header--secondary--link#following
           -if user_signed_in?
-            = link_to subscriptions_path do
+            = link_to subscriptions_path, class: ("active" if request.env['PATH_INFO'] == '/subscriptions') do
               FOLLOWING
               %span#user-follow-count= "(#{current_user.lists.count})"
-        %a.header--secondary--link#filter
-          FILTER
-          %i.fa.fa-chevron-down
+        - if request.env['PATH_INFO'] == '/'
+          .btn-group#filter
+            %button.btn.btn-default.dropdown-toggle(type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false")
+              %span#filter-display-name
+                - if @tag
+                  = @tag.name
+                - else 
+                  All topics
+              %span.caret
+            %ul.dropdown-menu#tag-dropdown-menu
+              %li= link_to "All topics", lists_path, remote: true
+              - Tag.all.each do |tag|
+                %li= link_to tag.name, tag_path(tag), class: "tag-" + tag.name, remote: true
+
+
+
 
 / %nav.navbar.navbar-inverse.navbar-fixed-top{role:"navigation"}
 /   .navbar-header
@@ -71,6 +84,10 @@
       "Collection": $text,
       "Relation": "Child"
     })
+  })
+  $('.dropdown-menu li').click( function() {
+    $text = $(this).text();
+    $('#filter-display-name').text($text);
   })
 
 
