--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,8 +4,10 @@
     %title
       = full_title(yield(:title))
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
-    = javascript_include_tag 'application', 'data-turbolinks-track' => true
+    
     %script{src: "//cdn.jsdelivr.net/jquery/2.1.3/jquery.min.js"}
+    = javascript_include_tag 'application', 'data-turbolinks-track' => true
+    =stylesheet_link_tag 'application', 'http://fonts.googleapis.com/css?family=Lato:400,700,900,400italic'
     = csrf_meta_tags
     %script{src: "//cdn.jsdelivr.net/algoliasearch/3/algoliasearch.min.js"} 
 
@@ -20,7 +22,7 @@
     /   = content_tag(:div, value, class: "alert alert-#{key}")
     .overlay.hide
     .item-modal.hide
-
+    
     = render 'layouts/header'
     / # = debug(params) if Rails.env.development?
 
