--- a/app/views/lists/_unfollow.html.haml
+++ b/app/views/lists/_unfollow.html.haml
@@ -1,3 +1,4 @@
-
+.list--badge.v-small-text#follow-count-list_{id:list.id}
+  = list.users.count
 = form_for(current_user.subscriptions.find_by(list_id: list.id), html: { method: :delete}, remote: true) do |f|
-  = f.submit "Unfollow", class: "btn btn-large btn-primary"
+  = f.submit '- Unfollow', class: "btn btn-large btn-primary"
