Add more tag colors

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -258,14 +258,25 @@ a {
 	background: #e54b4b;
 }
 .tag-Employment {
-	background: #e5c648;
+	background: #887faa;
 }
 .tag-Microfinance {
-	background: #82c440;
+	background: #41c6bc;
 }
 .tag-Firms {
 	background: #4178c6;
 }
+.tag-Education {
+	background: #e5c648;
+}
+.tag-Environment {
+	background: #82c440;
+}
+.tag-Cities {
+	background: #e5894b;
+}
+
+
 #filter {
 	ul {
 		// height: 100%;
