Precomiple tag colors

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -255,7 +255,7 @@ a {
 }
 
 .tag-Trade {
-	background: #e54b4b;
+	background: #999;
 }
 .tag-Employment {
 	background: #887faa;
@@ -274,6 +274,9 @@ a {
 }
 .tag-Cities {
 	background: #e5894b;
+}
+.tag-Foreign {
+	background: #e54b4b;
 }
 
 
