--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -28,7 +28,7 @@
           -if user_signed_in?
             =button_to subscriptions_path, method: "get", class: "btn btn-gray", id: ("active" if request.path == '/subscriptions') do
               %i.fa.fa-bookmark
-              Following
+              My Subscriptions
               %span#user-follow-count= "(#{current_user.lists.count})"
           -else
             %button.btn.btn-gray{"data-target" => "#myModal", "data-toggle" => "modal", :type => "button"}
