--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -630,6 +630,18 @@ html {
 .bottom-line {
 	li {
 		margin-bottom: 20px;
+		list-style-type: disc;
+	}
+	h4 {
+		font-weight: normal;
+	}
+	width: 700px;
+	// margin: 0 auto;
+	margin-top: 30px;
+	margin-bottom: 50px;
+	margin-left: 15px;
+	h3 {
+		margin-left: -15px;
 	}
 }
 
@@ -850,6 +862,10 @@ li {
 	background-color: #f5f5f5;
 	color: black;
 	margin-bottom: 10px;
+	h3 {
+		margin-top: 15px;
+		margin-bottom: 15px;
+	}
 
 }
 
