--- a/app/views/lists/show.html.haml
+++ b/app/views/lists/show.html.haml
@@ -27,26 +27,21 @@
 
 .container
   %ul.bottom-line
+    %h3 What we know so far
     %li 
       %h4
-        %i.fa.fa-arrow-circle-o-right
         The first experimental study of this question, conducted in 2014, found that exporting does actually increase firm productivity
     %li
       %h4 
-        %i.fa.fa-arrow-circle-o-right
         But this study only looked at rug manufacturers in Egypt, so more studies are needed to test in other settings
     %li
       %h4 
-        %i.fa.fa-arrow-circle-o-right
         %span.top-bullet One reason firms might become more productive is because exporting facilitates knowledge transfers between developed and devloping countries
-
 .container
-
   .papers
     .papers-heading
-      %h4.papers-title
-        %i.fa.fa-newspaper-o
-        Papers that contribute to this discussion
+      %h3.papers-title
+        Findings
 
     .papers-body
       .table-responsive
