--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -306,7 +306,7 @@ a {
 		margin: 5px 2px 0;
 		&:hover {
 			color: #333;
-			text-decoration: none;
+			// text-decoration: none;
 		}
 	}
 }
@@ -551,7 +551,7 @@ div {
 	h1 a {
 		font-size: 1.2em;
 		&:hover {
-			text-decoration: none;
+			// text-decoration: none;
 		}
 	}
 	h5 {
