--- a/app/views/lists/show.html.haml
+++ b/app/views/lists/show.html.haml
@@ -28,20 +28,12 @@
 .container
   %ul.bottom-line
     %h3 What we know so far
-    %li 
-      %h4
-        The first experimental study of this question, conducted in 2014, found that exporting does actually increase firm productivity
-    %li
-      %h4 
-        But this study only looked at rug manufacturers in Egypt, so more studies are needed to test in other settings
-    %li
-      %h4 
-        %span.top-bullet One reason firms might become more productive is because exporting facilitates knowledge transfers between developed and devloping countries
+    = raw @list.description
 .container
   .papers
     .papers-heading
       %h3.papers-title
-        Findings
+        Research papers that address this question
 
     .papers-body
       .table-responsive
